@@ -15,6 +15,12 @@
 # getopt returns error code 0 for succesful parsing, 1 if getopt(3) returns errors, 
 # 2 if it does not understand its own parameters, 3 if an internal error occurs like out-of-memory, 
 # and 4 if it is called with -T.
+
+
+
+source $BIOBASH_NATIVE_LIB
+
+#ALL BB scripts that receive input REQUIRE THE FLAG:"-i"
 while getopts i:o:: option; do
 	case "${option}" in
 		i)
@@ -22,7 +28,7 @@ while getopts i:o:: option; do
 		o)
 			output="$OPTARG";;
 		\?)
-			echo "[ERROR]"
+			feedback::sayfrom "Unknown option." "error"
 			exit;;
 	esac
 done	
@@ -30,22 +36,28 @@ done
 #--------------------------------------------------------------------------
 #						Validate Input
 # It is necessary to evaluate several input cases.
-# Case 1: nor -i OR $1 is provided
+# Case 1: -i  is not provided
 # Case 2: $1  AND -i are provided (i.e. bb_script file.fasta -i whatever)
+# 	When $1 is provided before -i. System outputs missing file.
+#	This can be considered a feature. ALL BB scripts REQUIRE "-i"
 # Case 3: -i is provided but it is empty (3.1).
 #	3.1 bb_script -i  (Handled by getopts)
-#	3.2 bb_script -i -o outdir. (Not Handled by getopts and NOT handled here!!)
-# The latter case is a bug? Needs re-thinking.
+# Case 4: -i is provided but empty, followed by -o. So -i thinks "-o" is the input.
 #--------------------------------------------------------------------------
 
+#Cases 1 and 4
 if  [[ -z "$fastaFile" ]] || [[ "$fastaFile" == "-o" ]]; then
-	echo "No Fasta file provided."
+	feedback::sayfrom "No fasta file provided" "error"
 	exit 1
-else
-	echo "Input: $fastaFile"
-	exit 0
 fi
 
-exit 
-grep '^>' "$1"  | sed -e 's/>//'
+#If user wants to save to a file
+if [[ ! -z "$output" ]];then
+	addToCommand=" > $output"
+else
+	addToCommand=""
+fi
+
+#TODO: create function create_file to save everything with "-o"
+grep '^>' "$fastaFile"  | sed -e 's/>//'
 exit 0	
