@@ -158,8 +158,8 @@ BIOBASH_OS="$OS"
 SHML_LIB="$BIOBASH_LIB/shml/shml.sh" 
 BASHUTILITY_LIB_PATH="$BIOBASH_LIB/bash-utility"
 BASHUTILITY_LIB="$BASHUTILITY_LIB_PATH/bash_utility.sh"
-BB_NATIVE_LIB_PATH="$BIOBASH_LIB/bb_native"
-BB_NATIVE_LIB="$BB_NATIVE_LIB_PATH/bb_native.sh"
+BIOBASH_NATIVE_LIB_PATH="$BIOBASH_LIB/bb_native"
+BIOBASH_NATIVE_LIB="$BB_NATIVE_LIB_PATH/bb_native.sh"
 
 if [[ $OS == "linux" ]];then
     BIOBASH_BIN_OS="$BIOBASH_BIN/$BIOBASH_OS"
@@ -189,8 +189,8 @@ BIOBASH_BIN_OS="$BIOBASH_BIN_OS"
 SHML_LIB="$SHML_LIB"
 BASHUTILITY_LIB_PATH="$BASHUTILITY_LIB_PATH"
 BASHUTILITY_LIB="$BASHUTILITY_LIB"
-BB_NATIVE_LIB_PATH="$BB_NATIVE_LIB_PATH"
-BB_NATIVE_LIB="$BB_NATIVE_LIB"
+BIOBASH_NATIVE_LIB_PATH="$BIOBASH_NATIVE_LIB_PATH"
+BIOBASH_NATIVE_LIB="$BIOBASH_NATIVE_LIB"
 
 
 export BIOBASH_HOME
@@ -201,8 +201,8 @@ export BIOBASH_BIN_OS
 export SHML_LIB
 export BASHUTILITY_LIB_PATH
 export BASHUTILITY_LIB
-export BB_NATIVE_LIB_PATH
-export BB_NATIVE_LIB
+export BIOBASH_NATIVE_LIB_PATH
+export BIOBASH_NATIVE_LIB
 
 
 export PATH="$BIOBASH_HOME:$BIOBASH_BIN_OS:$BIOBASH_BIN/$PATH"
