@@ -1,0 +1,3 @@
+>dummyfastaseq
+AGTGCTGTGACGACTAGCGCGCTGACGACTAGCTAGCAGCTAGCACGACGACTAC
+GGTGCTGTGACGACTGACTAGCGCGAGCTACGTTTTTACGCTAGCTAGCTACGAC
